--- a/index-parallax.html
+++ b/index-parallax.html
@@ -71,12 +71,12 @@
 
 											</li>
 											<li>
-												<a href="our-menu.html">
+												<a href="#">
 													<span class="underline">Меню</span>
 												</a>
 											</li>
 											<li class="menu-item-has-children dropdown">
-												<a href="blog-grid.html" class="dropdown-hover">
+												<a href="#" class="dropdown-hover">
 													<span class="underline">Блог</span>
 													<span class="caret"></span>
 												</a>
@@ -90,21 +90,21 @@
 												</a>
 											</li>
 											<li class="menu-item-has-children dropdown">
-												<a href="gallery.html" class="dropdown-hover">
+												<a href="#" class="dropdown-hover">
 													<span class="underline">Галерея</span>
 													<span class="caret"></span>
 												</a>
 
 											</li>
 											<li class="menu-item-has-children dropdown">
-												<a href="contact-us.html" class="dropdown-hover">
+												<a href="#" class="dropdown-hover">
 													<span class="underline">Контакты</span>
 													<span class="caret"></span>
 												</a>
 
 											</li>
 											<li class="menu-item-has-children megamenu megamenu-fullwidth dropdown">
-												<a href="about-us.html" class="dropdown-hover">
+												<a href="#" class="dropdown-hover">
 													<span class="underline">О нас</span>
 													<span class="caret"></span>
 												</a>
